--- a/world.css
+++ b/world.css
@@ -1,4 +1,4 @@
-
+audio { display:none;}
 a:link    {color:#B24900;  text-decoration:none}
 a:visited {color:#B24900; text-decoration:none}
 a:hover   {color:#FF8633; text-decoration:underline} /* Yellow */
