--- a/world.css
+++ b/world.css
@@ -25,7 +25,7 @@ div.a , .b, .c{
 
 
 body {
-  background-color: black;
+  background-color: fixed;
   display: grid;
   height: 100vh;
   margin: 0;
@@ -39,6 +39,7 @@ body {
   width: 40px;
   height: 40px;
   margin-right: 25px;
+  background-color: fixed;
 }
 
 
