--- a/world.css
+++ b/world.css
@@ -1,5 +1,28 @@
+audio { display:none;}
+a:link    {color:#B24900;  text-decoration:none}
+a:visited {color:#B24900; text-decoration:none}
+a:hover   {color:#FF8633; text-decoration:underline} /* Yellow */
 
-@import url('//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css');
+/* ----------------------------- */
+html, body {
+    /* The universe takes up all available space */
+    width: 100%;
+    height: 100%;
+    
+    background-image: url("https://static.pexels.com/photos/110854/pexels-photo-110854-medium.jpeg");
+  
+   /* image in the container */
+   background-size: contain;
+   background-attachment: fixed;
+    /* The universe is black */
+    background-color: black;  
+}
+div#container {height:500px;width:100%;}
+
+div.a , .b, .c{
+  position:fixed;    
+}
+
 #social {
   margin: 20px 10px;
   text-align: center;
@@ -65,7 +88,7 @@
 
 .youtubeBtn:before{ /* use :before to add the relevant icons */
     font-family: "FontAwesome";
-    content: "\f09a"; /* add facebook icon */
+    content: "\f09a"; /* add youtube icon */
 }
 
 .youtubeBtn:hover{
