--- a/world.css
+++ b/world.css
@@ -22,6 +22,15 @@ div#container {height:500px;width:100%;}
 div.a , .b, .c{
   position:fixed;    
 
+ul {
+    list-style: none;
+}
+
+ul li {
+    margin:5px 20px;
+    float:left;
+}
+
 .wp-icon {
   width: 50px;
   height: 50px;
