--- a/world.css
+++ b/world.css
@@ -22,6 +22,10 @@ div#container {height:500px;width:100%;}
 div.a , .b, .c{
   position:fixed;    
 
+#social {
+  margin: 20px 10px;
+  text-align: center;
+}
 .wp-icon {
   width: 50px;
   height: 50px;
