--- a/world.css
+++ b/world.css
@@ -32,50 +32,41 @@ div.a , .b, .c{
   line-height: 50px;
   vertical-align: middle;
   color: #fff;
-  margin-right: 5px;
-  background-size: 100% 100%;
+  margin-right: 100px;
+  background-size: 500% 500%;
 }
 
 
-logo-facebook {
+.logo-facebook {
   background: #3B5998;
   width: 100px;
   height: 100px;
   background-size: 100% 100%;
-      border-radius: 100%;
-
 }
 
-logo-twitter {  
+.logo-twitter {  
   background: #1DA1F2;
   width: 100px;
   height: 100px;
   background-size: 100% 100%;
-      border-radius: 100%;
-
 }
-logo-instagram {
+.logo-instagram {
   background: #d6249f;
   background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
   box-shadow: 0px 3px 10px rgba(0,0,0,.25);
   width: 100px;
   height: 100px;
   background-size: 100% 100%;  
-      border-radius: 100%;
-
 }
-logo-youtube {
+.logo-youtube {
   background: #FF0000;
   width: 100px;
   height: 100px;
   background-size: 100% 100%;  
-      border-radius: 100%;
-
 }
-logo-github {
+.logo-github {
     background-color: #5a32a3;
     width: 100px;
     height: 100px;
     background-size: 100% 100%;
-      border-radius: 100%;
 }
