--- a/world.css
+++ b/world.css
@@ -22,7 +22,7 @@ div#container {height:500px;width:100%;}
 div.a , .b, .c{
   position:fixed;    
 
-.social-icon {
+social-icon {
   margin: 200px 200px;
   text-align: center;
   width: 100px;
@@ -32,25 +32,25 @@ div.a , .b, .c{
   line-height: 50px;
   vertical-align: middle;
   color: #fff;
-  margin-right: 100px;
+  margin-right: 200px;
   background-size: 500% 500%;
 }
 
 
-.logo-facebook {
+logo-facebook {
   background: #3B5998;
   width: 100px;
   height: 100px;
   background-size: 100% 100%;
 }
 
-.logo-twitter {  
+logo-twitter {  
   background: #1DA1F2;
   width: 100px;
   height: 100px;
   background-size: 100% 100%;
 }
-.logo-instagram {
+logo-instagram {
   background: #d6249f;
   background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
   box-shadow: 0px 3px 10px rgba(0,0,0,.25);
@@ -58,13 +58,13 @@ div.a , .b, .c{
   height: 100px;
   background-size: 100% 100%;  
 }
-.logo-youtube {
+logo-youtube {
   background: #FF0000;
   width: 100px;
   height: 100px;
   background-size: 100% 100%;  
 }
-.logo-github {
+logo-github {
     background-color: #5a32a3;
     width: 100px;
     height: 100px;
