--- a/world.css
+++ b/world.css
@@ -37,13 +37,15 @@ social-icon {
 }
     
 logo-facebook {
+  font-size: 50px;    
   background: #3B5998;
   width: 100px;
   height: 100px;
   background-size: 100% 100%;
 }
 
-logo-twitter {  
+logo-twitter {
+  font-size: 50px;  
   background: #1DA1F2;
   width: 100px;
   height: 100px;
@@ -51,6 +53,7 @@ logo-twitter {
 }
     
 logo-instagram {
+  font-size: 50px;  
   background: #d6249f;
   background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
   box-shadow: 0px 3px 10px rgba(0,0,0,.25);
@@ -60,6 +63,7 @@ logo-instagram {
 }
     
 logo-youtube {
+  font-size: 50px;  
   background: #FF0000;
   width: 100px;
   height: 100px;
@@ -67,6 +71,7 @@ logo-youtube {
 }
     
 logo-github {
+    font-size: 50px;
     background-color: #5a32a3;
     width: 100px;
     height: 100px;
