--- a/world.css
+++ b/world.css
@@ -6,7 +6,7 @@ html, body {
     width: 100%;
     height: 100%;
     
-  
+   background-image: url("https://static.pexels.com/photos/110854/pexels-photo-110854-medium.jpeg");
    /* image in the container */
    background-size: contain;
    background-attachment: fixed;
