--- a/world.css
+++ b/world.css
@@ -11,7 +11,7 @@ html, body {
    background-size: contain;
    background-attachment: fixed;
     /* The universe is black */
-    background-color: white;  
+    background-color: black;  
 }
 div#container {height:500px;width:100%;}
 
