--- a/world.css
+++ b/world.css
@@ -1,11 +1,16 @@
 audio { display:none;}
-a:link    {color:#FF0000;  text-decoration:none}
+a:link    {color:#B24900;  text-decoration:none}
+a:visited {color:#B24900; text-decoration:none}
+a:hover   {color:#FF8633; text-decoration:underline} /* Yellow */
+
 /* ----------------------------- */
 html, body {
+    /* The universe takes up all available space */
     width: 100%;
     height: 100%;
     
-   background-image: url("https://static.pexels.com/photos/110854/pexels-photo-110854-medium.jpeg");
+    background-image: url("https://static.pexels.com/photos/110854/pexels-photo-110854-medium.jpeg");
+  
    /* image in the container */
    background-size: contain;
    background-attachment: fixed;
@@ -15,39 +20,37 @@ html, body {
 div#container {height:500px;width:100%;}
 
 div.a , .b, .c{
-  position:fixed;  
-    
-ion-icon {
-  font-size: 100px;
-}
+  position:fixed;    
+
 .social-icon {
-  font-size: 200px;    
+  margin: 20px 10px;
   text-align: center;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 50px;
+  vertical-align: middle;
+  color: #fff;
+  margin-right: 5px;  
 }
-    
+
+
 logo-facebook {
-  font-size: 100px;    
   background: #3B5998;
 }
-    
+
 logo-twitter {
-  font-size: 100px;  
   background: #1DA1F2;
 }
-    
 logo-instagram {
-  font-size: 100px;  
   background: #d6249f;
   background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
   box-shadow: 0px 3px 10px rgba(0,0,0,.25);
 }
-    
 logo-youtube {
-  font-size: 100px;  
   background: #FF0000;
 }
-    
 logo-github {
-    font-size: 100px;
-    background: #5a32a3;
+    background-color: #5a32a3;
 }
