--- a/world.css
+++ b/world.css
@@ -21,6 +21,18 @@ div#container {height:500px;width:100%;}
 
 div.a , .b, .c{
   position:fixed;    
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+html,body{
+  margin:0;
+  height:100%;
+  font-family: 'Montserrat', sans-serif;
+}
+.container{
+  padding-top:30px;
+  min-height:100%;
+  text-align:center;
+  background: linear-gradient(0deg, rgba(34,195,104,1) 0%, rgba(45,77,253,1) 100%);
+}
 
 .social-icon {
   margin: 20px 10px;
@@ -37,20 +49,33 @@ div.a , .b, .c{
 
 
 logo-facebook {
-  background: #3B5998;
-}
+    font-size: 22px;
+    padding-top: 9px;
+    border-color: #3b5998;
+    background-color: #3b5998;
+    color: #ffffff;}
 
 logo-twitter {
-  background: #1DA1F2;
-}
+    font-size: 22px;
+    padding-top: 10px;
+    padding-left: 2px;
+    border-color: #55acee;
+    background-color: #55acee;
+    color: #ffffff;
+    }
 logo-instagram {
   background: #d6249f;
   background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
   box-shadow: 0px 3px 10px rgba(0,0,0,.25);
 }
 logo-youtube {
+  font-size: 22px;
+  padding-top: 9px;
+  padding-left: 0px;
   background: #FF0000;
 }
 logo-github {
+    font-size: 22px;
+    padding-top: 9px;
     background-color: #5a32a3;
 }
