--- a/world.css
+++ b/world.css
@@ -2,6 +2,7 @@ audio { display:none;}
 a:link    {color:#B24900;  text-decoration:none}
 a:visited {color:#B24900; text-decoration:none}
 a:hover   {color:#FF8633; text-decoration:underline} /* Yellow */
+i { font-size: 50px; }
 li.social-icon i { font-size: 50px; }
 /* ----------------------------- */
 html, body {
@@ -18,6 +19,7 @@ html, body {
     background-color: black;  
 }
 div#container {height:500px;width:100%;}
+li.social-icon i { font-size: 50px; }
 
 div.a , .b, .c{
   position:fixed;    
@@ -33,6 +35,7 @@ html,body{
   text-align:center;
   background: linear-gradient(0deg, rgba(34,195,104,1) 0%, rgba(45,77,253,1) 100%);
 }
+li.social-icon i { font-size: 50px; }
 
 li.logo-facebook {
     padding-top: 10px;
