--- a/world.css
+++ b/world.css
@@ -19,37 +19,13 @@ html, body {
     /* The universe is black */
     background-color: black;  
 }
-div#container {height:500px;width:100%;}
-li.social-icon i { font-size: 50px; }
+html, body {
+    /* The universe takes up all available space */
+    width: 100%;
+    height: 100%;
+  font-size: 100%;
 
-div.a , .b, .c{
-  position:fixed;    
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
-html,body{
-  margin:10px;
-  height:100%;
-  font-family: 'Montserrat', sans-serif;
-}
-.container{
-  padding-top:30px;
-  min-height:100%;
-  text-align:center;
-  background: linear-gradient(0deg, rgba(34,195,104,1) 0%, rgba(45,77,253,1) 100%);
-}
-li.social-icon i { font-size: 50px; }
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
-html,body{
-  margin:0;
-  height:100%;
-  font-family: 'Montserrat', sans-serif;
-}
-.container{
-  padding-top:30px;
-  min-height:100%;
-  text-align:center;
-  background: linear-gradient(0deg, rgba(34,195,104,1) 0%, rgba(45,77,253,1) 100%);
-}
-li.logo-facebook {
+logo-facebook {
     padding-top: 10px;
     border-color: #3b5998;
     background-color: #3b5998;
@@ -57,7 +33,7 @@ li.logo-facebook {
     font-size: 22px;
     }
 
-li.logo-twitter {
+logo-twitter {
     padding-top: 10px;
     padding-left: 2px;
     border-color: #55acee;
@@ -65,27 +41,20 @@ li.logo-twitter {
     color: #ffffff;
     font-size: 22px;
     }
-li.logo-instagram {
+logo-instagram {
   color: #d6249f;
   background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
   box-shadow: 0px 3px 10px rgba(0,0,0,.25);
 }
-li.logo-youtube {
+logo-youtube {
   padding-top: 9px;
   padding-left: 0px;
   color: #FF0000;
   font-size: 22px;
 }
-li.logo-github {
+logo-github {
     padding-top: 9px;
     color: #5a32a3;
     font-size: 22px;
+    }   
 }
-
-    
-body {
-  margin: 0;
-  height: 100vh;
-  width: 100vw;
-}
-
