--- a/world.css
+++ b/world.css
@@ -1,60 +1,96 @@
-audio { display:none;}
-a:link    {color:#B24900;  text-decoration:none}
-a:visited {color:#B24900; text-decoration:none}
-a:hover   {color:#FF8633; text-decoration:underline} /* Yellow */
-i { font-size: 50px; }
-li.social-icon i { font-size: 50px; }
-/* ----------------------------- */
-html, body {
-    /* The universe takes up all available space */
-    width: 100%;
-    height: 100%;
-  font-size: 100%;
-
-    background-image: url("https://static.pexels.com/photos/110854/pexels-photo-110854-medium.jpeg");
-  
-   /* image in the container */
-   background-size: contain;
-   background-attachment: fixed;
-    /* The universe is black */
-    background-color: black;  
+a {
+  color: #fff;
+  text-decoration: none;
 }
-html, body {
-    /* The universe takes up all available space */
-    width: 100%;
-    height: 100%;
-  font-size: 100%;
-
-logo-facebook {
-    padding-top: 10px;
-    border-color: #3b5998;
-    background-color: #3b5998;
-    color: #ffffff;
-    font-size: 22px;
-    }
-
-logo-twitter {
-    padding-top: 10px;
-    padding-left: 2px;
-    border-color: #55acee;
-    background-color: #55acee;
-    color: #ffffff;
-    font-size: 22px;
-    }
-logo-instagram {
-  color: #d6249f;
-  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
-  box-shadow: 0px 3px 10px rgba(0,0,0,.25);
+.me {
+  width: 400px;
+  margin: 90px auto;
 }
-logo-youtube {
-  padding-top: 9px;
-  padding-left: 0px;
-  color: #FF0000;
-  font-size: 22px;
+.me p,
+.me h1 {
+  letter-spacing: 3px;
+  text-align: center;
 }
-logo-github {
-    padding-top: 9px;
-    color: #5a32a3;
-    font-size: 22px;
-    }   
+.me p {
+  font-weight: 200;
+}
+.me span {
+  font-weight: bold;
+}
+.social {
+  position: fixed;
+  top: 20px;
+}
+.social ul {
+  padding: 0px;
+  -webkit-transform: translate(-270px, 0);
+  -moz-transform: translate(-270px, 0);
+  -ms-transform: translate(-270px, 0);
+  -o-transform: translate(-270px, 0);
+  transform: translate(-270px, 0);
+}
+.social ul li {
+  display: block;
+  margin: 5px;
+  background: rgba(0, 0, 0, 0.36);
+  width: 300px;
+  text-align: right;
+  padding: 10px;
+  -webkit-border-radius: 0 30px 30px 0;
+  -moz-border-radius: 0 30px 30px 0;
+  border-radius: 0 30px 30px 0;
+  -webkit-transition: all 1s;
+  -moz-transition: all 1s;
+  -ms-transition: all 1s;
+  -o-transition: all 1s;
+  transition: all 1s;
+}
+.social ul li:hover {
+  -webkit-transform: translate(110px, 0);
+  -moz-transform: translate(110px, 0);
+  -ms-transform: translate(110px, 0);
+  -o-transform: translate(110px, 0);
+  transform: translate(110px, 0);
+  background: rgba(255, 255, 255, 0.4);
+}
+.social ul li:hover a {
+  color: #000;
+}
+.social ul li:hover i {
+  color: #fff;
+  background: rgba(0, 0, 0, 0.36);
+  -webkit-transform: rotate(360deg);
+  -moz-transform: rotate(360deg);
+  -ms-transform: rotate(360deg);
+  -o-transform: rotate(360deg);
+  transform: rotate(360deg);
+  -webkit-transition: all 1s;
+  -moz-transition: all 1s;
+  -ms-transition: all 1s;
+  -o-transition: all 1s;
+  transition: all 1s;
+}
+.social ul li i {
+  margin-left: 10px;
+  color: #000;
+  background: #fff;
+  padding: 10px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  font-size: 20px;
+  background: #ffffff;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+}
+
+body {
+  background: #000000;
+  color: #fff;
+  font-family: 'Raleway', sans-serif;
 }
