--- a/world.css
+++ b/world.css
@@ -24,56 +24,75 @@ body {
   background-color: rgba(255, 0, 0, 0.05);
 }
 
-.social-container {
-  width: 400px;
-  margin: 40vh auto;
-  text-align: center;
+body {
+  margin:0;
+  padding:0;
+  background: #000000;
 }
 
-.social-icons {
-  padding: 0;
+ul {
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform: translate(-50%, -50%);
+  margin:0;
+  padding:0;
+  display:flex;
+}
+
+ul li {
   list-style: none;
-  margin: 1em;
 }
-.social-icons li {
-  display: inline-block;
-  margin: 0.15em;
+
+ul li a {
   position: relative;
-  font-size: 1.9em;
+  width:60px;
+  height:60px;
+  display:block;
+  text-align:center;
+  margin:0 10px;
+  border-radius: 50%;
+  padding: 6px;
+  box-sizing: border-box;
+  text-decoration:none;
+  box-shadow: 0 10px 15px rgba(0,0,0,0.3);
+  background: linear-gradient(0deg, #ddd, #fff);
+  transition: .5s;
 }
-.social-icons i {
-  color: #fff;
-  position: absolute;
-  top: 21px;
-  left: 21px;
-  transition: all 265ms ease-out;
+
+ul li a:hover {
+  box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+  text-decoration:none;
 }
-.social-icons a {
-  display: inline-block;
+
+ul li a .fab {
+  widht: 100%;
+  height:100%;
+  display:block;
+  background: linear-gradient(0deg, #fff, #ddd);
+  border-radius: 50%;
+  line-height: calc(60px - 12px);
+  font-size:24px;
+  color: #262626;
+  transition: .5s;
 }
-.social-icons a:before {
-  transform: scale(1);
-  -ms-transform: scale(1);
-  -webkit-transform: scale(1);
-  content: " ";
-  width: 60px;
-  height: 60px;
-  border-radius: 100%;
-  display: block;
-  background: linear-gradient(45deg, #ff0000, #002a8f);
-  transition: all 265ms ease-out;
+
+ul li:nth-child(1) .fab {
+  color: #3b5998;
 }
-.social-icons a:hover:before {
-  transform: scale(0);
-  transition: all 265ms ease-in;
+
+ul li:nth-child(2) .fab {
+  color: #00aced;
 }
-.social-icons a:hover i {
-  transform: scale(2.2);
-  -ms-transform: scale(2.2);
-  -webkit-transform: scale(2.2);
-  color: #ff0000;
-  background: -webkit-linear-gradient(45deg, #ff0000, #002a8f);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  transition: all 265ms ease-in;
+
+ul li:nth-child(3) .fab {
+  color: #dd4b39;
+}
+
+ul li:nth-child(4) .fab {
+  color: #FF0000;
+}
+
+ul li:nth-child(5) .fab {
+  color: #FF00FF;
 }
