--- a/world.css
+++ b/world.css
@@ -1,9 +1,15 @@
 audio { display:none;}
+a:link    {color:#FF0000;  text-decoration:none}
+a:visited {color:#FF0000; text-decoration:none}
+a:hover   {color:#FF0000; text-decoration:underline} /* Yellow */
+i { font-size: 50px; }
+li.social-icon i { font-size: 50px; }
+/* ----------------------------- */
 html, body {
     /* The universe takes up all available space */
     width: 100%;
     height: 100%;
-  font-size: 100%;
+  font-size: 50%;
 
     background-image: url("https://static.pexels.com/photos/110854/pexels-photo-110854-medium.jpeg");
   
@@ -19,33 +25,36 @@ html, body {
     height: 100%;
   font-size: 100%;
 
-@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
-body {
-  background-color: rgba(255, 0, 0, 0.05);
-}
+logo-facebook {
+    padding-top: 10px;
+    border-color: #3b5998;
+    background-color: #3b5998;
+    color: #ffffff;
+    font-size: 22px;
+    }
 
-body {
-  margin:0;
-  padding:0;
-  background: #000000;
+logo-twitter {
+    padding-top: 10px;
+    padding-left: 2px;
+    border-color: #55acee;
+    background-color: #55acee;
+    color: #ffffff;
+    font-size: 22px;
+    }
+logo-instagram {
+  color: #d6249f;
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
+  box-shadow: 0px 3px 10px rgba(0,0,0,.25);
 }
-
-ul li:nth-child(1) .fab {
-  color: #3b5998;
-}
-
-ul li:nth-child(2) .fab {
-  color: #00aced;
-}
-
-ul li:nth-child(3) .fab {
-  color: #dd4b39;
-}
-
-ul li:nth-child(4) .fab {
+logo-youtube {
+  padding-top: 9px;
+  padding-left: 0px;
   color: #FF0000;
+  font-size: 22px;
 }
-
-ul li:nth-child(5) .fab {
-  color: #FF00FF;
+logo-github {
+    padding-top: 9px;
+    color: #5a32a3;
+    font-size: 22px;
+    }   
 }
