--- a/world.css
+++ b/world.css
@@ -1,15 +1,15 @@
 audio { display:none;}
 a:link    {color:#FF0000;  text-decoration:none}
 a:visited {color:#FF0000; text-decoration:none}
-a:hover   {color:#FF0000; text-decoration:underline} /* Yellow */
-i { font-size: 50px; }
-li.social-icon i { font-size: 50px; }
+a:hover   {color:#FF0000; text-decoration:underline}
+a: { font-size: 100px; }
+social-icon { font-size: 100px; }
 /* ----------------------------- */
 html, body {
     /* The universe takes up all available space */
     width: 100%;
     height: 100%;
-  font-size: 50%;
+  font-size: 100%;
 
     background-image: url("https://static.pexels.com/photos/110854/pexels-photo-110854-medium.jpeg");
   
