--- a/world.css
+++ b/world.css
@@ -10,7 +10,7 @@ html, body {
     width: 100%;
     height: 100%;
   font-size: 100%;
-
+}
     background-image: url("https://static.pexels.com/photos/110854/pexels-photo-110854-medium.jpeg");
   
    /* image in the container */
@@ -24,4 +24,5 @@ html, body {
     width: 100%;
     height: 100%;
   font-size: 100%;
-
+}
+social-icon { font-size: 100px; }
