--- a/world.css
+++ b/world.css
@@ -2,15 +2,13 @@ audio { display:none;}
 a:link    {color:#FF0000;  text-decoration:none}
 a:visited {color:#FF0000; text-decoration:none}
 a:hover   {color:#FF0000; text-decoration:underline}
-a: { font-size: 100px; }
-social-icon { font-size: 100px; }
 /* ----------------------------- */
 html, body {
     /* The universe takes up all available space */
     width: 100%;
     height: 100%;
   font-size: 100%;
-}
+    
     background-image: url("https://static.pexels.com/photos/110854/pexels-photo-110854-medium.jpeg");
   
    /* image in the container */
@@ -25,4 +23,13 @@ html, body {
     height: 100%;
   font-size: 100%;
 }
-social-icon { font-size: 100px; }
+ul {
+  font-size: 50px;  
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform: translate(-50%, -50%);
+  margin:0;
+  padding:0;
+  display:flex;
+}
