--- a/world.css
+++ b/world.css
@@ -1,26 +1,64 @@
 audio { display:none;}
 a:link    {color:#FF0000;  text-decoration:none}
 a:visited {color:#FF0000; text-decoration:none}
-a:hover   {color:#FF0000; text-decoration:underline}
+a:hover   {color:#FF0000; text-decoration:underline} /* Yellow */
+i { font-size: 50px; }
+li.social-icon i { font-size: 50px; }
 /* ----------------------------- */
 html, body {
     /* The universe takes up all available space */
     width: 100%;
     height: 100%;
-  font-size: 100%;
-  background-image: url("https://static.pexels.com/photos/110854/pexels-photo-110854-medium.jpeg");  
+  font-size: 50%;
+
+    background-image: url("https://static.pexels.com/photos/110854/pexels-photo-110854-medium.jpeg");
+  
    /* image in the container */
    background-size: contain;
    background-attachment: fixed;
     /* The universe is black */
     background-color: black;  
-
+}
 html, body {
     /* The universe takes up all available space */
     width: 100%;
     height: 100%;
   font-size: 100%;
+
+logo-facebook {
+    padding-top: 10px;
+    border-color: #3b5998;
+    background-color: #3b5998;
+    color: #ffffff;
+    font-size: 22px;
+    }
+
+logo-twitter {
+    padding-top: 10px;
+    padding-left: 2px;
+    border-color: #55acee;
+    background-color: #55acee;
+    color: #ffffff;
+    font-size: 22px;
+    }
+logo-instagram {
+  color: #d6249f;
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
+  box-shadow: 0px 3px 10px rgba(0,0,0,.25);
 }
+logo-youtube {
+  padding-top: 9px;
+  padding-left: 0px;
+  color: #FF0000;
+  font-size: 22px;
+}
+logo-github {
+    padding-top: 9px;
+    color: #5a32a3;
+    font-size: 22px;
+    }   
+}
+
 ul {
   font-size: 50px;  
   position:absolute;
