--- a/world.css
+++ b/world.css
@@ -35,3 +35,38 @@ ul {
   padding:0;
   display:flex;
 }
+    
+    logo-facebook {
+    padding-top: 10px;
+    border-color: #3b5998;
+    background-color: #3b5998;
+    color: #ffffff;
+    font-size: 22px;
+    }
+
+logo-twitter {
+    padding-top: 10px;
+    padding-left: 2px;
+    border-color: #55acee;
+    background-color: #55acee;
+    color: #ffffff;
+    font-size: 22px;
+    }
+logo-instagram {
+  color: #d6249f;
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
+  box-shadow: 0px 3px 10px rgba(0,0,0,.25);
+}
+logo-youtube {
+  padding-top: 9px;
+  padding-left: 0px;
+  color: #FF0000;
+  font-size: 22px;
+}
+logo-github {
+    padding-top: 9px;
+    color: #5a32a3;
+    font-size: 22px;
+    }   
+
+
