--- a/world.css
+++ b/world.css
@@ -2,6 +2,9 @@ audio { display:none;}
 a:link    {color:#FF0000;  text-decoration:none}
 a:visited {color:#FF0000; text-decoration:none}
 a:hover   {color:#FF0000; text-decoration:underline} /* Yellow */
+decoration:underline} /* Yellow */
+i { font-size: 50px; }
+li.social-icon i { font-size: 50px; }
 /* ----------------------------- */
 html, body {
     /* The universe takes up all available space */
