--- a/world.css
+++ b/world.css
@@ -22,8 +22,8 @@ html, body {
 }
 
 ul {
-  font-size: 20px;  
-  position:absolute;
+  font-size: 50px;  
+  position:bottom;
   top:50%;
   left:50%;
   transform: translate(-50%, -50%);
