--- a/world.css
+++ b/world.css
@@ -10,9 +10,9 @@ html, body {
     /* The universe takes up all available space */
     width: 100%;
     height: 100%;
-  font-size: 50%;
+  font-size: 25%;
 
-    background-image: url("https://static.pexels.com/photos/110854/pexels-photo-110854-medium.jpeg");
+ background-image: url("https://static.pexels.com/photos/110854/pexels-photo-110854-medium.jpeg");
   
    /* image in the container */
    background-size: contain;
@@ -20,7 +20,12 @@ html, body {
     /* The universe is black */
     background-color: black;  
 }
-
+ul li a {
+  position: bottom;
+  width:60px;
+  height:60px;
+  display:block;
+    text-align:center;}
 ul {
   font-size: 100px;  
   position:bottom;
