--- a/world.css
+++ b/world.css
@@ -23,6 +23,8 @@ html, body {
 ul {
   font-size: 50px; 
   position:bottom;
+  top:50%;
+  left:50%;
   transform: translate(-50%, -50%);
   margin:0;
   padding:0;
