--- a/world.css
+++ b/world.css
@@ -22,7 +22,7 @@ html, body {
 
 ul {
   font-size: 50px; 
-  position:bottom;
+  position:absolute;
   top:50%;
   left:50%;
   transform: translate(-50%, -50%);
