--- a/world.css
+++ b/world.css
@@ -19,10 +19,15 @@ html, body {
     /* The universe is black */
     background-color: black;  
 }
-
+.social-container {
+  width: 400px;
+  margin: 40vh auto;
+  text-align: center;
+  position:bottom;
+}
 ul {
   font-size: 50px; 
-  position:relative;
+  position:bottom;
   margin:0;
   padding:0;
   display:flex;
