--- a/world.css
+++ b/world.css
@@ -26,10 +26,10 @@ html, body {
   position:bottom;
 }
 ul {
+  text-align: center;
+  position: absolute; bottom: 10px; left: 0;
+  width: 100%;
   font-size: 50px; 
-  position:bottom;
-  margin:0;
-  padding:0;
   display:flex;
 }
     
