--- a/world.css
+++ b/world.css
@@ -22,7 +22,7 @@ html, body {
 
 ul {
   text-align: center;
-  position: absolute; bottom: 10; left: 0;
+  position: absolute; 
   width: 100%;
   font-size: 50px; 
 }
