--- a/world.css
+++ b/world.css
@@ -19,12 +19,13 @@ html, body {
     /* The universe is black */
     background-color: black;  
 }
+li.social-icon i { font-size: 50px; text-align: center; position: absolute; }
 
 ul {
   text-align: center;
   position: absolute; 
-  width: 100%;
-  height: 100%;
+  width: 50%;
+  height: 50%;
   font-size: 50px;
 }
     
