--- a/world.css
+++ b/world.css
@@ -22,8 +22,8 @@ html, body {
 
 ul {
   text-align: center;
-  position: absolute; 
-  width: 100%;
+   position: absolute; bottom: 10px; left: 0;
+   width: 100%;
   height: 100%;
   font-size: 50px;
 }
