--- a/world.css
+++ b/world.css
@@ -21,6 +21,12 @@ html, body {
 }
 
 ul {
+        top:50%;
+        left:50%;
+        transform: translate(-50%, -50%);
+  margin:0;
+  padding:0;
+  display:flex;
   text-align: center;
    position: absolute; bottom: 10px; left: 0;
    width: 100%;
