--- a/world.css
+++ b/world.css
@@ -25,7 +25,7 @@ ul {
   transform: translate(-50%, -50%);
   margin:0;
   padding:0;
-  display:flex;
+  display:inline;
   text-align: center;
    position: absolute; bottom: 10px; left: 0;
    width: 100%;
