--- a/world.css
+++ b/world.css
@@ -1,8 +1,7 @@
 audio { display:none;}
 a:link    {color:#FF0000;  text-decoration:none}
 a:visited {color:#FF0000; text-decoration:none}
-a:hover   {color:#FF0000; text-decoration:underline} /* Yellow */
-decoration:underline} /* Yellow */
+a:hover   {color:#FF0000; text-decoration:underline}
 i { font-size: 50px; }
 li.social-icon i { font-size: 50px; }
 /* ----------------------------- */
@@ -21,7 +20,6 @@ html, body {
 }
 
 ul {
-  display:inline;
   text-align: center;
    position: absolute; bottom: 10px; left: 0;
    width: 100%;
