--- a/world.css
+++ b/world.css
@@ -19,7 +19,13 @@ font-size: 50px;
 
 
 ul {
-  text-align: center;
-  font-size: 50px;
+  position:absolute; bottom: 10px; left: 0;
+  width: 100%;
+  top:50%;
+  left:50%;
+  transform: translate(-50%, -50%);
+  margin:0;
+  padding:0;
+  display:flex;
 }
     
