--- a/world.css
+++ b/world.css
@@ -19,11 +19,9 @@ font-size: 50px;
 }
 
 ul {
-  position:absolute; bottom: 10px; left: 0;
-  width: 100%;
+  position:absolute; bottom: 10px; 
   top:50%;
   left:50%;
-  transform: translate(-50%, -50%);
   display:flex;
     font-size: 50px;
 }
