--- a/world.css
+++ b/world.css
@@ -19,9 +19,8 @@ font-size: 50px;
 }
 
 ul {
-  position:absolute; 
-  social-icon:bottom; 
-  display:flex;
-    font-size: 40px;
+  text-align: center;
+   position: absolute; bottom: 10px; left: 0;
+   width: 100%;
 }
     
