--- a/world.css
+++ b/world.css
@@ -19,8 +19,9 @@ font-size: 50px;
 }
 
 ul {
-  text-align: center;
-   position: absolute; bottom: 10px; left: 0;
-   width: 100%;
+  position:absolute; 
+  social-icon:bottom; 
+  display:flex;
+  font-size: 40px;
 }
     
