--- a/world.css
+++ b/world.css
@@ -1,6 +1,7 @@
 audio { display:none;}
 a:link    {color:#FF0000;  text-decoration:none}
 a:visited {color:#FF0000; text-decoration:none}
+a:hover   {color:#00ff00; text-decoration:underline}
 i { font-size: 50px; }
 li.social-icon i { font-size: 50px; }
 /* ----------------------------- */
