--- a/world.css
+++ b/world.css
@@ -4,6 +4,8 @@ a:visited {color:#FF0000; text-decoration:none}
 a:hover   {color:#00ff00; text-decoration:underline}
 i { font-size: 50px; }
 li.social-icon i { font-size: 50px; }
+ul { position:center; }
+div { position:center; }
 /* ----------------------------- */
 html, body {
     /* The universe takes up all available space */
