--- a/world.css
+++ b/world.css
@@ -21,7 +21,7 @@ font-size: 50px;
 }
 
 ul {
-  position:absolute; 
+  position:bottom; 
   social-icon:bottom; 
   display:flex;
   font-size: 40px;
