--- a/world.css
+++ b/world.css
@@ -22,7 +22,7 @@ font-size: 50px;
 
 ul {
   position:center; 
-  social-icon:bottom; 
+  social-icon:center; 
   display:flex;
   font-size: 40px;
   text-align:center;
