--- a/world.css
+++ b/world.css
@@ -22,7 +22,7 @@ font-size: 50px;
 
 ul {
   position:center; 
-  social-icon:center; 
+  social-icon:bottom; 
   font-size: 50px;
   text-align:center;
 }
