--- a/world.css
+++ b/world.css
@@ -21,7 +21,7 @@ font-size: 40px;
 }
 
 ul {
-  position:center; 
+  position:bottom; 
   social-icon:bottom; 
   font-size: 40px;
   text-align:center;
