--- a/cal/dark.css
+++ b/cal/dark.css
@@ -1,3 +1,13 @@
+body {
+  text-align: center;
+  font-family: Iceland;
+  font-weight: bold;
+  background-color: #000000;
+  color: #00ff00]['\;
+  a:visited color:#FF0000;
+  font-size: 22px;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
